--- a/data/html/no settings.html
+++ b/data/html/no settings.html
@@ -40,7 +40,7 @@
                             <div class="switch">
                                 <label>
                                     Disabled
-                                    <input type="checkbox" id="updatesc">
+                                    <input type="checkbox" id="updatesc" checked>
                                     <span class="lever"></span>
                                     Enabled
                                 </label>
