--- a/data/html/index.html
+++ b/data/html/index.html
@@ -212,6 +212,36 @@
                 </div>
             </div>
         </div>
+
+        <div class="timecontainer">
+            <div class="note"><b>WARNING:</b><br>Modify the time at your own risk. Don't forget NPC's walk to all events
+            and they get triggered at certain positions at certain times - meaning if you change the time you can mess up their
+            AI.<br>If you want to meet the merchant f.e. - set the day to Gluttony (the 3rd one) and change the Time to f.e.
+            3:00 - this is because the change from morning to day leaves the merchant enough time to walk to the barn and also
+            triggers his change of location in the morning. - if you would set it f.e. to 12:00 he wouldn't appear</div>
+            <div class="col s12 energy">Current Day:
+                <div class="input-field inline s8">
+                    <input id="day" type="number" class="validate valid" min="0" value="${data["time"]["day"]}">
+                    <span class="helper-text" data-error="Please input a number" data-success="">Please input a number</span>
+                </div>
+            </div>
+        <div class="dayindicator col s12">
+            <div class="day active"><img src="/rsc/pride.png"></div>
+            <div class="day"><img src="/rsc/lust.png"></div>
+            <div class="day"><img src="/rsc/gluttony.png"></div>
+            <div class="day"><img src="/rsc/envy.png"></div>
+            <div class="day"><img src="/rsc/wrath.png"></div>
+            <div class="day"><img src="/rsc/sloth.png"></div>
+        </div>
+        <div class="timeofdayslider col s12">
+            <p class="range-field">
+                <input type="range" id="timeofday" min="0" max="24" step="0.25" />
+            </p>
+            <p class="timeoutput">24:00</p>
+        </div>
+
+        </div>
+
         <div class="row miscbuttons">
             <div class="btn deldrops col s6 offset-s3">Remove all Drops</div>
         </div>
@@ -256,6 +286,10 @@
                 </div>
             </div>
         </div>
+        <p>Equipped Items:</p>
+<div class="note"><b>WARNING:</b><br>Change the item to a non tool item at your own risk.</div>
+        <div class="equipped-items">
+        </div>
     </form>
 </div>
 <div class="intro lesspadding">Additional Storages</div>
@@ -297,10 +331,38 @@
             // Show a loader because no events are applied to the buttons yet so the user knows he still has to wait
             $(".loadingmask").fadeIn(500);
 
+            $("#timeofday").val((data.time.timeofday + 1) * 12);
+
+
+
+            $('#timeofday').on("input", function () {
+
+                let t = parseFloat($("#timeofday").val());
+                $(".timeoutput").text(Math.floor(t) + ":" + Math.floor(t % 1 * 60));
+                if($(".timeoutput").text().split(":")[1].length == 1) $(".timeoutput").text($(".timeoutput").text()+"0")
+
+                data.time.timeofday = (t / 12)-1;
+            });
+            $("#timeofday").trigger("input")
+
+            $("#day").on("input", function(){
+                $(".day").removeClass("active");
+                $($(".day")[(parseInt($("#day").val())-1) % 6]).addClass("active");
+                data["time"]["day"] = parseInt($("#day").val());
+            })
+
+            $("#day").trigger("input");
+
             // Add the items in the inventory to the form
             for (let i = 0; i < data["inventory"].length; i++) {
                 let it = data["inventory"][i];
                 $(".items").append(await addItem(it["id"], it["amount"], it["durability"]));
+            }
+
+            // Add the items in tool section to the equipped inventory list (only allow repairs)
+            for (let i = 0; i < data["subinventory"].length; i++) {
+                let it = data["subinventory"][i];
+                $(".equipped-items").append(await addItem(it["id"], it["amount"], it["durability"]));
             }
 
             // Add additional inventories
@@ -596,7 +658,7 @@
 
 
             // Remove an item on click
-            $(".items").on("click", ".itemremove", function () {
+            $(".items, .equipped-items").on("click", ".itemremove", function () {
                 let e = $(this);
 
                 // extract the id
@@ -622,6 +684,10 @@
                             createInventoryMiniPreview(invindex)
                         }, 100);
 
+                    }
+                    //Sub Inventory
+                    else if(e.parents(".equipped-items").length > 0) {
+                        data["subinventory"].splice(index, 1)
                     }
                     // Own inventory
                     else data["inventory"].splice(index, 1)
@@ -680,7 +746,7 @@
 
 
             //Handle changing an item
-            $(".items").on("click", ".itemname:not('.curactive')", function () {
+            $(".items, .equipped-items").on("click", ".itemname:not('.curactive')", function () {
                 let e = $(this).parent();
                 $(this).addClass("curactive")
                 $(this).html(
@@ -721,13 +787,16 @@
             });
 
             // Repair logic --> set the durability to 1 on a broken item
-            $(".items").on("click", ".repairbtn", function () {
+            $(".items, .equipped-items").on("click", ".repairbtn", function () {
                 let e = $($(this).parents()[3]);
                 if (e.parents(".additionalitems").length > 0) {
                     let invindex = parseInt($(this).parents(".inventorycon").find(".invtinfo").attr("id").split(
                         "inv")[1])
                     data["additionalstorage"][invindex]["items"][e.index()]["durability"] = 1;
-                } else data["inventory"][e.index()]["durability"] = 1;
+                } else if(e.parents(".equipped-items").length > 0) {
+                    data["subinventory"][e.index()]["durability"] = 1;
+                }
+                else data["inventory"][e.index()]["durability"] = 1;
                 e.find(".repairbtn").remove();
 
             });
@@ -985,6 +1054,14 @@
                 data["inventory"][i]["amount"] = parseInt($(items[i]).find("input").val());
                 data["inventory"][i]["id"] = $(items[i]).find(".itemid").text().replace(/\(|\)/g, "");
             }
+
+            // Iterate the items of the subinventory
+            items = $("form>.equipped-items .item");
+            for (let i = 0; i < items.length; i++) {
+                data["subinventory"][i]["id"] = $(items[i]).find(".itemid").text().replace(/\(|\)/g, "");
+            }
+
+
 
             // Iterate all relationships
             let relationships = $(".relationships input")
