--- a/data/html/loadsavefile.html
+++ b/data/html/loadsavefile.html
@@ -113,9 +113,21 @@
     </main>
     <footer></footer>
     <script>
+
+        let disable_context_menu = true;
+
         // Contextmenu is not needed, for that reason it is disabled
-        $(document).contextmenu(function (e) {
-            e.preventDefault()
+        $(document).contextmenu(function(e){
+            if (disable_context_menu) {
+                e.preventDefault()
+            }
+        });
+
+        // Allow context menu when ALT was clicked once
+        $("body").keydown(function(e){
+            if(e.altKey == true){
+                disable_context_menu = false;
+            };
         })
 
         // Source: https://github.com/darkskyapp/string-hash/blob/master/index.js
